--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #111;
   background: #f5f5f5;
 }
@@ -422,3 +422,4 @@ body {
     grid-template-columns: 1fr;
   }
 }
+
