--- a/css/style.css
+++ b/css/style.css
@@ -422,4 +422,15 @@ body {
     grid-template-columns: 1fr;
   }
 }
+.skip-link {
+  display: block;
+  width: 100%;
+  background: #000;
+  color: #fff;
+  padding: 10px 14px;
+  text-align: center;
+  font-weight: 700;
+  text-decoration: none;
+}
+
 
