--- a/css/style.css
+++ b/css/style.css
@@ -915,5 +915,19 @@ body {
   }
 }
 
+.hero-media img,
+.thumb img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.hero-media,
+.thumb {
+  overflow: hidden;
+  position: relative;
+}
+
 
 
